# Homomorphic-Least-Squares-SVM

./: CMakeLists.txt  HEmatrix.h  common.h  custom_eval.cpp  custom_eval.h  hom_lssvm.h  lssvm.h  plain_lssvm.cpp  poly.cpp  poly.h  test.cpp  test2.cpp
